objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>CN_Sales_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FDemo%2FSample</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Quote%2FNegotiation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Created_By_Others__c</fullName>
        <formula>Account.OwnerId  &lt;&gt;  CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN Created By Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Expected_Purchase_Date__c</fullName>
        <label>Expected Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Generate_From_Lead_Id__c</fullName>
        <label>Generate From Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Assigned_to_Me__c</fullName>
        <formula>CreatedById &lt;&gt;  OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Manual__c</fullName>
        <formula>AND(
  ISBLANK(CN_Generate_From_Lead_Id__c  ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Loss_Description__c</fullName>
        <label>Loss Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Lead time</fullName>
                </value>
                <value>
                    <fullName>Customer Canceled products</fullName>
                </value>
                <value>
                    <fullName>Payment Term</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Lost to competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>CN_My_Assinged_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CN_Is_Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Assigned Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Closing_in_7_days</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Closing in 7 days</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CN_Is_Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>CN_Opportunity</fullName>
        <active>true</active>
        <businessProcess>CN_Sales_Process</businessProcess>
        <label>CN Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Check_Actual_Close_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 ISBLANK(CN_Actual_Close_Date__c  ),
 ISPICKVAL( StageName , &apos;Closed Won&apos;) 
)</errorConditionFormula>
        <errorDisplayField>CN_Actual_Close_Date__c</errorDisplayField>
        <errorMessage>Actual Close Date is required when closed won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Expected_Purchase_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 ISBLANK( CN_Expected_Purchase_Date__c ),
 ISPICKVAL( StageName , &apos;Closed Won&apos;) 
)</errorConditionFormula>
        <errorDisplayField>CN_Expected_Purchase_Date__c</errorDisplayField>
        <errorMessage>Expected Purchase Date is required when closed won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Loss_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
OR(ISPICKVAL(StageName, &apos;Closed Lost&apos;),ISPICKVAL(StageName, &apos;Closed Cancelled&apos;)),
 ISBLANK(TEXT(CN_Loss_Reason__c)) 
)</errorConditionFormula>
        <errorDisplayField>CN_Loss_Reason__c</errorDisplayField>
        <errorMessage>Loss Reason is required when Closed Lost or Closed Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Proposal_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISPICKVAL( StageName , &quot;Proposal/Demo/Sample&quot;),
OR( Amount &lt;= 0 ||  ISBLANK(Amount),  ISBLANK(CloseDate) )
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>It&apos;s required to input expected amount or select interested SKUs, and choose expected close date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Opportunity_Check_Actual_Close_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR(
    ISNEW(),
    ISCHANGED(CN_Actual_Close_Date__c )
  ),
  CN_Actual_Close_Date__c &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>CN_Actual_Close_Date__c</errorDisplayField>
        <errorMessage>Actual close date should later than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Opportunity_Check_CloseDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR(
    ISNEW(),
    ISCHANGED(CloseDate )
  ),
  CloseDate &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Expect close date should later than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Opportunity_Check_Purchase_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR(
    ISNEW(),
    ISCHANGED(CN_Expected_Purchase_Date__c )
  ),
  CN_Expected_Purchase_Date__c&lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>CN_Expected_Purchase_Date__c</errorDisplayField>
        <errorMessage>Expected purchase date should later than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Back_To_Qualification</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 ISCHANGED( StageName ) ,
 NOT(ISPICKVAL(PRIORVALUE(StageName),&apos;Qualification&apos;)),
  ISPICKVAL(StageName, &apos;Qualification&apos;) 
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>It&apos;s not allowed to change the stage back to Qualification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_After_Close</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
		  OR(
		   ISPICKVAL( PRIORVALUE(StageName) , &quot;Closed Won&quot;) &amp;&amp; ISPICKVAL( (StageName) , &quot;Closed Cancelled&quot;) &amp;&amp; (
				(ISCHANGED(CN_Actual_Close_Date__c))||
				(ISCHANGED(CN_Campaign__c))||
				(ISCHANGED(CloseDate))||
				(ISCHANGED(Amount))||
				(ISCHANGED(CN_Expected_Purchase_Date__c))||
				(ISCHANGED(Name))||
				(ISCHANGED(OwnerId))||
				(ISCHANGED(Type))||
				(ISCHANGED(Description))
		   ),
		   ISPICKVAL( PRIORVALUE(StageName) , &quot;Closed Won&quot;) &amp;&amp; NOT(ISPICKVAL( (StageName) , &quot;Closed Cancelled&quot;)),
		   ISPICKVAL( PRIORVALUE(StageName) , &quot;Closed Lost&quot;),
		   ISPICKVAL( PRIORVALUE(StageName) , &quot;Closed Cancelled&quot;)
		  )
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>It&apos;s not allow to edit after close.</errorMessage>
    </validationRules>
</CustomObject>